--- a/src/docs/asciidoc/scenegraph.adoc
+++ b/src/docs/asciidoc/scenegraph.adoc
@@ -262,20 +262,20 @@ button.setOnKeyPressed(e -> ...);
 button.setOnKeyReleased(e -> ...);
 ----
 
-这里的对象 `e` 的类型为 `KeyEvent`，它携带有关键码的信息，
+这里的对象 `e` 的类型为 `KeyEvent`，它携带有关的键码信息，
 然后可以映射到键盘上一个真正的物理键。
 
-== Timing
+== 时序
 
-It is important to understand the timing difference between the creation of JavaFX UI controls and the display of the controls.  When creating the UI controls -- either through direct API object creation or through FXML -- you may be missing certain screen geometry values such as the dimensions of a window.  That is available later, at the instant when the screen is shown to the user.  That showing event, called OnShown, is the time at which a window has been allocated and the final layout computations completed.
+理解 JavaFX UI 控件的创建与控件的显示之间的时序差异是很重要的。创建UI控件时——直接通过 API 对象创建或通过 FXML 创建——你可能缺少某些屏幕几何值，例如窗口的尺寸。稍后，在屏幕向用户显示窗口时尺寸才可用。这个显示事件成为 `OnShown`，是分配窗口和完成最终布局计算的时候。
 
-To demonstrate this, consider the following program which displays the screen dimensions while the UI controls are being created and the screen dimensions when the screen is shown.  The following screenshot shows the running of the program.  When the UI controls are being created (new VBox(), new Scene(), primaryStage.setScene()), there are no actual window height and width values available as evidenced by the undefined "NaN" values.
+为了证明这一点，请考虑以下程序，该程序在创建 UI 控件时显示屏幕尺寸，在屏幕显示时显示屏幕尺寸。以下截图显示了程序的运行情况。当正在创建 UI 控件时（`new VBox()`、`new Scene()`、`primaryStage.setScene()`），没有任何实际的窗口高度和宽度值，可以通过未定义的“NaN”值来证明。
 
-image::images/scenegraph/scenegraph_startvshown.png[title="Screen Geometry Not Available Before OnShown"]
+image::images/scenegraph/scenegraph_startvshown.png[title="屏幕几何在打开之前不可用"]
 
-However, the values for width and height are available once the window is shown.  The program registers an event handler for the OnShown event and prepares the same output.
+然而，一旦显示窗口，便可以使用宽度与高度的值。程序为 `OnShown` 事件注册一个事件处理程序，并准备相同的输出。
 
-The following is the Java class of the demonstration program.
+下面是演示程序的 Java 类：
 
 [source,java]
 .StartVsShownJavaFXApp
@@ -320,13 +320,13 @@ public class StartVsShownJavaFXApp extends Application {
 
         primaryStage.setScene( scene );
 
-        // before show()...I just set this to 480x320, right?
+        // 在 show() 之前……我刚刚把它设置为 480x320，对吧？
         startX.set( primaryStage.getWidth() );
         startY.set( primaryStage.getHeight() );
 
         primaryStage.setOnShown( (evt) -> {
             shownX.set( primaryStage.getWidth() );
-            shownY.set( primaryStage.getHeight() );  // all available now
+            shownY.set( primaryStage.getHeight() );  // 现在全部可用
         });
 
         primaryStage.setTitle("Start Vs. Shown");
@@ -339,5 +339,5 @@ public class StartVsShownJavaFXApp extends Application {
 }
 ----
 
-Sometimes, you'll know the screen dimensions in advance and can use those values at any point in the JavaFX program.  This includes before the OnShown event.  However, if your initialization sequence contains logic that needs these values, you'll need to work with the OnShown event.  A use case might be working with the last saved dimensions or dimensions based on program input.
+有时，你将提前了解屏幕尺寸，可以在 JavaFX 程序中的任何地方使用这些值。这包括在 `OnShown` 事件之前。但是，如果你的初始化序列包含需要这些值的逻辑，那么需要使用 `OnShown` 事件。用例可能使用最后保存的尺寸或基于程序输入的尺寸。
 
