--- a/src/docs/asciidoc/ui-controls.adoc
+++ b/src/docs/asciidoc/ui-controls.adoc
@@ -1,16 +1,16 @@
-= UI Controls
+= UI 控件
 
-== ChoiceBox
+== 单项选择框
 
-This article demonstrates the `ChoiceBox`.  The `ChoiceBox` control is a list of values from which the user makes a selection.  In this particular implementation, there is an empty value which makes the selection optional.
+本文演示了 `ChoiceBox`。`ChoiceBox` 控件是一个值列表，用户可以从中进行选择。在这种特定实现中，存在一个空值，这使得选择是可选的。
 
-The following screenshot shows `ChoiceBox` app.  A selection "Furniture" is made and the Save `Button` is pressed.  The Save `Button` call invokes a println() which prints out the object.
+以下屏幕截图显示了 `ChoiceBox` 应用程序。选择“Furniture”并按下 Save `Button`。Save `Button` 调用 `println()` 打印出对象。
 
-image::images/ui-controls/choicebox.png[title="ChoiceBox Printing Out Selection"]
+image::images/ui-controls/choicebox.png[title="单项选择框打印出选择"]
 
-The program puts a `Label`, a `ChoiceBox`, and a `Button` into an HBox.  An action is set on the Save `Button` which prints out the value.
+该程序将 `Label`、`ChoiceBox` 与 `Button` 放入 Hbox中。在“Save” `Button` 上设置了一个操作，该操作打印出值。
 
-The simplest usage of the `ChoiceBox` is to fill it with Strings.  This `ChoiceBox` in this article is built on a JavaFX class called `Pair`.  `Pair` is a general container for any key/value pair and can be used in place of a domain or other special-purpose object.  Strings should only be used if they can be used without manipulation or decoded consistently.
+`ChoiceBox` 的最简单用法是用字符串填充它。本文中的此 `ChoiceBox` 构建在一个名为 `Pair` 的 JavaFX 类上。`Pair` 是任何键/值对的一般容器，可以用于代替域或其他专用对象。字符串只能在不需要操作或一致解码的情况下使用。
 
 [source,java]
 .ChoicesApp.class
@@ -49,11 +49,11 @@ public class ChoicesApp extends Application {
     }
 ----
 
-=== StringConverter
+=== 字符转换工具类
 
-When using a complex object to back a `ChoiceBox`, a `StringConverter` is needed.  This object serializes a String to and from the `ChoiceBox`.  For this program, only the toString() needs to be coded which replaces the default toString() of the `Pair` object.  (Both toString and fromString will need an implementation in order to compile.)
+当使用复杂对象支持 `ChoiceBox` 时，需要一个 `StringConverter`。此对象将字符串序列化到 `ChoiceBox` 中。对于此程序，只需要编码 `toString()`，替换 `Pair` 对象的默认 `toString()`。（`toString` 与 `fromString` 都需要实现以进行编译。）
 
-An empty object EMPTY_PAIR is used to prevent NullPointerExceptions.  The returned value from assetClass().getValue() can be accessed and compared consistently without adding special null handling logic.
+空对象 `EMPTY_PAIR` 用于防止 `NullPointerExceptions`。可以访问和比较来自 `assetClass().getValue()` 的返回值，而无需添加特殊的空处理逻辑。
 
 [source,java]
 ----
@@ -85,11 +85,11 @@ An empty object EMPTY_PAIR is used to prevent NullPointerExceptions.  The return
     }
 ----
 
-The ChoiceBox is used to select from a list of values.  When the list of values is a complex type, provide a StringFormatter to serialize a list object into something presentable.  If possible, use an empty object (rather than a null) to support optional values.
+单项选择框用于从值列表中进行选择。当值列表是复杂类型时，提供一个 StringFormatter，以将列表对象序列化为呈现的东西。如果可能，请使用空对象（而不是 null）来支持可选值。
 
-==== Complete Code
+==== 完整代码
 
-The code can be tested in a single .java file.
+代码可以在单个 .java 文件中进行测试。
 
 [source,java]
 .ChoicesApp.class
